Bug 508836 - selection action bar
Summary: selection action bar
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-28 02:11 UTC by Squeaky Pancakes
Modified: 2025-09-03 22:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Squeaky Pancakes 2025-08-28 02:11:15 UTC
in nightly appimage(8d173ab) the new selection action bar doesnt take stylus inputs instead it will keep trying to select the canvas under the menu bar, mouse inputs works however

SUMMARY


STEPS TO REPRODUCE
1. create a selection
2. try to click any of the buttons

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Operating System: Artix Linux 
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.16.2-artix1-1 (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-3550 CPU @ 3.30GHz
Memory: 16 GiB of RAM (15.6 GiB usable)
Graphics Processor: AMD Radeon RX 580 Series

ADDITIONAL INFORMATION
Comment 1 Emmet O'Neill 2025-09-03 22:29:32 UTC
Git commit b87a27297dad0b337d3eb0a7dec951ad11eb2b2b by Emmet O'Neill.
Committed on 03/09/2025 at 22:21.
Pushed by emmetoneill into branch 'master'.

SelectionActionsPanel: Fixed tablet input.

Whoops. I guess I should have tested with my tablet. :)

M  +6    -2    libs/ui/kis_selection_actions_panel.cpp

https://invent.kde.org/graphics/krita/-/commit/b87a27297dad0b337d3eb0a7dec951ad11eb2b2b