SelectionActionsPanel: Fixed tablet input.

Whoops. I guess I should have tested with my tablet. :)

BUG:508836